Update arrow labels for navigation

--- a/sections/image-carousel.liquid
+++ b/sections/image-carousel.liquid
@@ -303,7 +303,7 @@
       
       {% if show_arrows %}
         <button class="carousel-arrow carousel-arrow-prev" 
-                aria-label="Slow down"
+                aria-label="Previous view"
                 style="width: {{ arrows_size }}px;
                        height: {{ arrows_size }}px;
                        background-color: {{ arrows_bg_color }};
@@ -315,7 +315,7 @@
           </svg>
         </button>
         <button class="carousel-arrow carousel-arrow-next" 
-                aria-label="Speed up"
+                aria-label="Next view"
                 style="width: {{ arrows_size }}px;
                        height: {{ arrows_size }}px;
                        background-color: {{ arrows_bg_color }};
