--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,7 +34,7 @@
     {{ content_for_layout }}
   </main>
 
-  {% render 'footer' %}
+  {% section 'footer' %}
 
   <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
